# pv-chat

./: .gitignore  Cargo.toml
cipher/src/: error.rs  lib.rs
cipher/tests/: test.rs
client/: Cargo.toml
client/src/: app.rs  client.rs  client_args.rs  error.rs  lib.rs  main.rs
client/src/controller/: bootstrap.rs  controller.rs  mod.rs
client/src/logic/: client.rs  connection.rs  message.rs  mod.rs
client/src/model/: chat_state.rs  cipher.rs  mod.rs  ui_state.rs
client/src/presenter/: mod.rs
client/src/services/: custom_net.rs  mod.rs  net.rs
client/src/types/: message.rs
client/src/view/: bootstrap.rs  mod.rs
client/src/view/args/: mod.rs
client/src/view/ui/: gui.rs  mod.rs  ui.rs
server/: Cargo.toml
server/src/: client.rs  config.rs  error.rs  main.rs  message.rs  server_config.rs
server/src/app/: bootstrap.rs  mod.rs  server.rs
server/src/types/: client.rs  message.rs  mod.rs
sliding_window/src/: error.rs  lib.rs  types.rs
sliding_window/tests/: tests.rs
