[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cipher = { path = "./../cipher" }
clap = { version = "4.0.32", features = ["derive"] }
regex = "1"
eframe = "0.20.1"
rfd = "0.10"

